# QT_Mqtt_Http

./: README.md
mqtt-http/: mqtt.qmlproject  qmlmodules
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: mqttApp.cmake
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_mqttApp.rsp
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.rcc/: configuration.qrc  mqttApp_raw_qml_0.qrc  qmake_Main.qrc
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/content/: cmake_install.cmake
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/content/.rcc/: content_raw_qml_0.qrc  qmake_content.qrc
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/imports/: cmake_install.cmake
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/imports/mqtt/: cmake_install.cmake  mqttplugin_init.cpp  (+1 more)
mqtt-http/build-mqtt-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/qmltypes/: mqttApp_foreign_types.txt
mqtt-http/mqtt/: CMakeLists.txt
mqtt-http/mqtt/content/: App.qml  Screen01.ui.qml
mqtt-http/mqtt/imports/: CMakeLists.txt
mqtt-http/mqtt/imports/mqtt/: CMakeLists.txt  qmldir
mqtt-http/mqtt/src/: iot.cpp  iot.h  main.cpp
mqtt-http/src/: import_qml_plugins.h  iot.cpp
(+372 files in other folders)
